# HS-Julia

./: .gitignore  Dockerfile  Julia.cabal  README.md
src/: Main.hs  Orbit.hs  Polynomial.hs  Ring.hs
