cabal-version:      2.4
name:               Julia
version:            1.0.0.0
tested-with:        GHC ==9.4.8

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             JunghunleePhD
maintainer:         

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Julia
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Ring
                    , Polynomial
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>= 4.17 || ^>= 4.18
    ghc-options:      -O2
    hs-source-dirs:   src
    default-language: Haskell2010
